# DDI-Expert

./: README.md  pyproject.toml  requirements.txt
codes/: __init__.py  config.py  data.py  lora.py  metrics.py  models.py  moe.py  prompts.py  training.py
data/: data.txt  domain_adaptation_dataset.xlsx  domain_application_dataset.xlsx
