[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddi-expert"
version = "0.1.0"
description = "Publication-ready refactor of the DDI-Expert MoE PK-DDI codebase."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.12.0",
    "scikit-learn>=1.5.0",
    "torch>=2.2.0",
    "transformers>=4.44.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
